Fixing infotab display cutoff

--- a/en/css/mapping.css
+++ b/en/css/mapping.css
@@ -993,6 +993,3 @@ tr.row_even td{
 #f1_infowin_selectedAttribute{
 display:none;
 }
-div#f1_infowin_tabs div{
-height:110px;
-}
